Fix selection visibility

--- a/index.less
+++ b/index.less
@@ -17,6 +17,10 @@ atom-text-editor, :host {
     color: #F8F8F8;
   }
 
+  .selection .region {
+    background-color: rgba(221, 240, 255, 0.2);
+  }
+
   &.is-focused {
     .cursor {
       border-color: #A7A7A7;
@@ -25,6 +29,7 @@ atom-text-editor, :host {
     .selection .region {
       background-color: rgba(221, 240, 255, 0.2);
     }
+
     .line-number.cursor-line-no-selection, .line.cursor-line {
       background-color: rgba(166, 148, 66, 0);
     }
